# melisa_main

./: .gitignore  ARCHITECTURE_FLOW.md  Cargo.toml  LICENSE  MNODE_SETUP.md  README.md  REFACTOR_SUMMARY.md  melisa.conf  nodes.json  quickstart.sh  test_management_api.sh
doc/report01/: 00-OVERVIEW.md  03-MASALAH-ARSITEKTUR.md  04-KUALITAS-KODE.md  07-QUICK-REFERENCE.md
doc/report02/: MELISA-AUDIT-REPORT-v2.md
mnode/: Cargo.toml  MNODE_GUIDE.md  QUICK_REFERENCE.md  mnode.conf  mnode.conf.example
mnode/public/html/: app.js  index.html  style.css
mnode/src/: config.rs  handler.rs  main.rs  registration.rs
report/: 01-BUG-KRITIS.md  02-IMPLEMENTASI-BELUM-SELESAI.md  05-FITUR-YANG-HILANG.md  06-REKOMENDASI-AKSI.md
src/: main.rs
src/mcore/: mod.rs
src/mcore/adapter/: api.rs  json.rs
src/mcore/api/: services.rs
src/mcore/config/: load_config.rs
src/mcore/errors/: e_node.rs  econfig.rs  enode.rs  mod.rs
src/mcore/handler/: handler.rs
src/mcore/melisad/: mconf.rs  mod.rs
src/mcore/melisad/management/: handler.rs  mod.rs  server.rs
src/mcore/melisad/probes/: liveness_node.rs  mod.rs  startup_node.rs  starup_node.rs
src/mcore/melisad/proxy/: handler.rs  loadbalancer.rs  metrics.rs  server.rs
src/mcore/melisad/services/: config.rs  hashing.rs  mconf.rs  mod.rs  node.rs
src/mcore/melisad/services/node/: manager.rs  models.rs  operations.rs  persistence.rs
src/mcore/melisad/utils/: hashing.rs  mod.rs  pid.rs
src/mcore/mlog/: config.rs  log_config.rs  logger.rs  mod.rs
src/mcore/services/: config.rs  hashing.rs  mod.rs  node.rs
