[package]
name = "melisa_beta"
version = "0.1.0"
edition = "2024"

[dependencies]
portpicker = "0.1.1"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["process", "macros", "rt-multi-thread"] }
toml = "1.1.2"
