[package]
name = "melisa_beta"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
portpicker = "0.1.1"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
