[package]
name = "melisa_beta"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.32"
once_cell = "1.21.4"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
http-body-util = "0.1.2"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
serial_test = "3.5.0"
