[package]
name = "mnode"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
hyper-util = { version = "0.1.7", features = ["full"] }
http-body-util = "0.1.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
reqwest = { version = "0.13.4", features = ["json"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
hostname = "0.4"
toml = "1.1.2"
mime_guess = "2.0"
